# openafs

./: .cvsignore  .gitignore  .gitreview  .mailmap  .splintrc  .travis.yml  CODING  CONTRIBUTING  ChangeLog  INSTALL  LICENSE  Makefile-libafs.in  Makefile-libktrace.in  Makefile.in  NEWS  NTMakefile  README  README-NT  README-WINDOWS  README.CVS  README.DEVEL  README.GIT  README.OBSOLETE  README.PTHREADED_UBIK  README.RXK5  README.SECURITY  README.WARNINGS  RELNOTES-1.2.10  RELNOTES-1.2.6  RELNOTES-1.2.8  acconfig.h  acinclude.m4  aclocal.m4  config.guess  configure  configure-libafs  configure-libafs.ac  configure-libafs.in  configure-libktrace.in  configure.ac  (+5 more)
src/: .cvsignore  .gitignore  BUILDNOTES  DOLASTCMP.BAT  GoLast.bat  LICENSE  Makefile  Makefile.am  Makefile.am.common  Makefile.djgpp  NTLang.bat  NTMake9x  NTMakefile  NTObjdir  README  README-NT  README-WIN9X  README.OBSOLETE  README.SECURITY  README.md  SOURCE-MAP  TechNotes-JavaAPI  TechNotes-WIN9X  acconfig.h  afsconfig.h.in  configure.in  helper-splint.sh.in  libafsdep  mkdest.pl  ntbuild.bat  regen.sh  rmbat.bat  splint.cfg  symlink.bat
src/afs/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  NTMakefile  afs.h  afs_analyze.c  afs_axscache.c  afs_axscache.h  afs_buffer.c  afs_bypasscache.c  afs_bypasscache.h  afs_call.c  afs_callback.c  afs_capabilities.c  afs_capabilities.h  afs_cbqueue.c  afs_cbqueue.h  afs_cell.c  afs_chunk.c  afs_chunkops.h  afs_conn.c  afs_consts.h  afs_daemons.c  afs_dcache.c  afs_disconnected.c  afs_dynroot.c  afs_dynroot.h  afs_error.c  afs_exporter.c  afs_fetchstore.c  afs_icl.c  afs_init.c  afs_lock.c  afs_mariner.c  afs_md5.c  afs_md5.h  afs_memcache.c  afs_nfsclnt.c  (+49 more)
src/afsd/: .cvsignore  .gitignore  CellServDB  Makefile  Makefile.in  afs.conf.linux  afs.hpux102.driver  afs.hpux1122.driver  afs.ppc_darwin.plist  afs.rc.alpha  afs.rc.alpha_dux40  afs.rc.darwin  afs.rc.darwin.plist  afs.rc.fbsd  afs.rc.hpux10  afs.rc.linux  afs.rc.obsd  afs.rc.sgi  afs.rc.sgi_ipnos  afs.rc.solaris  afs.rc.solaris.2.11  afs.rc.solaris.2.7  afs.rc.solaris.2.8  afs.rc.solaris.2.9  afs.rc.solaris.2_5  afs_rtsymtab.pl.sgi_53  afs_rtsymtab.pl.sgi_61  afsd.c  afsd.h  afsd_fuse.c  afsd_kernel.c  rc.afs.rs_aix  rc.afsd.large  rc.afsd.medium  rc.afsd.small  rc.dkload.client.rs_aix  rc.dkload.server.rs_aix  vsys.c
src/afsmonitor/: .cvsignore  .gitignore  Makefile  Makefile.in  afsmon-labels.h  afsmon-output.c  afsmon-parselog.c  afsmon-win.c  afsmonitor.c  afsmonitor.h
src/afsweb/: Makefile  Makefile.in  README  README.BETA1  README.BETA2  TestPlan.txt  WebSecure_Design.txt  afswsApache_config.sh  afswsNetscape_config.sh  apache_afs_cache.c  apache_afs_cache.h  apache_afs_client.c  apache_afs_module.c  apache_afs_plugin.c  apache_afs_utils.c  apache_afs_utils.h  apache_afs_weblog.c  apache_api.h  nsafs.c  nsafs.h  securehash.c  weblog.c  weblog_errors.h
src/aklog/: .cvsignore  .gitignore  Makefile.in  add_etbl.c  akeyconvert.c  aklog.1  aklog.c  aklog.h  aklog_main.c  aklog_param.c  aklog_roken.c  asetkey.c  ka-forwarder.c  klog.c  krb_util.c  linked_list.c  linked_list.h  skipwrap.c  skipwrap.h  verifykt.c
src/audit/: Makefile  Makefile.in  NTMakefile  audit-api.h  audit-file.c  audit-sysvmq.c  audit.c  audit.h  config.aix.sample  events.aix.sample  liboafs_audit.la.sym  objects.aix.sample
src/auth/: .cvsignore  .gitignore  Makefile  Makefile.in  NTMakefile  acfg_errors.et  afs_token.xg  afs_token_protos.h  akimpersonate.c  akimpersonate.h  akimpersonate_v5gen.c  akimpersonate_v5gen.h  auth.p.h  authcon.c  authcon.h  cellconfig.c  cellconfig.p.h  copyauth.c  internal.h  k5forgetest.c  keys.c  keys.h  ktc.c  ktc.h  ktc_errors.et  ktc_nt.c  libafsdep  liboafs_auth.la.sym  liboafs_auth_krb.la.sym  netrestrict.c  realms.c  rxk5_tkt.c  rxk5_tkt.h  rxk5_utilafs.c  rxk5_utilafs.h  rxkad_tkt.c  setkey.c  t_cap.c  t_name.c  t_tkt.c  (+6 more)
src/bozo/: .cvsignore  .gitignore  Makefile  Makefile.in  NTMakefile  bnode.c  bnode.p.h  bnode_internal.h  bos.c  bos.rc  bos_util.c  boserr.et  bosint.xg  bosoprocs.c  bosprototypes.h  bosserver.c  bosserver.rc  cronbnodeops.c  ezbnodeops.c  fsbnodeops.c  smail-notifier.c  tracepoint.tab
src/bu_utils/: .cvsignore  .gitignore  Contents.Readme  Makefile  Makefile.in  NTMakefile  fms.c  fms.doc  fms.rc
src/bubasics/: .cvsignore  .gitignore  Makefile  Makefile.in  NTMakefile  backmon.xg  bubasics.h  bumon.xg  butc.xg  butc_errs.et  butm.p.h  butm_errs.et  butx_errs.et  tcdata.p.h
src/bucoord/: .cvsignore  .gitignore  Makefile  Makefile.in  NTMakefile  backup.rc  bc.p.h  bc_status.c  btest.c  bucoord_errs.et  bucoord_internal.h  bucoord_prototypes.h  commands.c  config.c  dlq.c  dsstub.c  dsvs.c  dump.c  dump_sched.c  error_macros.h  expire.c  main.c  regex.c  regex.h  restore.c  server.c  status.c  tape_hosts.c  testcases  ttest.c  ubik_db_if.c  vol_sets.c  volstub.c
src/budb/: .cvsignore  .gitignore  Makefile  Makefile.in  NTMakefile  budb.rg  budb_client.h  budb_client.p.h  budb_errs.et  budb_internal.h  budb_prototypes.h  buserver.rc  database.c  database.h  db_alloc.c  db_dump.c  db_hash.c  db_lock.c  db_lock.h  db_text.c  dbs_dump.c  error_macros.h  globals.h  ol_verify.c  procs.c  server.c  struct_ops.c
src/butc/: .cvsignore  .gitignore  Makefile  Makefile.in  NTMakefile  afsxbsa.c  afsxbsa.h  butc.rc  butc_internal.h  butc_prototypes.h  butc_xbsa.c  butc_xbsa.h  common.h  config  dbentries.c  dump.c  dumpScr  error_macros.h  list.c  lwps.c  read_tape.c  recoverDb.c  restoreScr  tcmain.c  tcprocs.c  tcstatus.c  tcudbprocs.c  tdump.c  test.c  test_budb.c
src/butm/: .gitignore  Makefile  Makefile.in  NTMakefile  butm.vdoc  butm_prototypes.h  butm_test.c  config  error_macros.h  file_tm.c  test_ftm.c
src/cf/: Makefile.am.common  abs-install.m4  afs-libtool.m4  aix-cc.m4  as.m4  autoheader.m4  bigendian.m4  bsd.m4  bswap.m4  c-atomic.m4  c-attribute.m4  c-flexible-array.m4  c-pragma.m4  c-struct-label.m4  cc.m4  crosstools.m4  crypt.m4  ctf-tools.m4  ctf.m4  curses.m4  darwin-exp-dc.m4  dirent.m4  dirpaths.m4  doc.m4  fdsetsize.m4  flex.m4  function-macro.m4  (+77 more)
(+9349 files in other folders)
